# intercept

./: .gitignore  README.md  pyproject.toml  setup-intercept.sh  uninstall-intercept.sh
intercept/: __init__.py  cli.py  config.py  display.py  exporter.py  filters.py  proxy.py  storage.py
