[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tian-intercept"
version = "1.0.0"
description = "tian-intercept — CLI HTTP/HTTPS Traffic Inspector by Tianndev"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tianndev" }]
keywords = ["http", "https", "proxy", "traffic", "inspector", "cli", "mitmproxy", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mitmproxy>=10.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pygments>=2.17.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.scripts]
tian-intercept = "intercept.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["intercept*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
